--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,12 @@ h6 {
   border-bottom: 2px solid #18d26e;
   padding-bottom: 6px;
 }
+#cv h3 {
+  color: #fff;
+  border-bottom: 3px solid #18d26e;
+  padding-bottom: 6px;
+
+}
 
 #header img {
   padding: 0;
